<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_admin"
    app:startDestination="@id/adminDashboardFragment">

    <fragment
        android:id="@+id/adminDashboardFragment"
        android:name="edu.alia.queueease.features.admin.AdminDashboardFragment"
        android:label="@string/nav_dashboard" />

    <fragment
        android:id="@+id/serviceCentersFragment"
        android:name="edu.alia.queueease.features.admin.ServiceCentersFragment"
        android:label="@string/nav_centers" />

    <fragment
        android:id="@+id/registerStaffFragment"
        android:name="edu.alia.queueease.features.admin.RegisterStaffFragment"
        android:label="@string/nav_add_staff" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="edu.alia.queueease.features.profile.ProfileFragment"
        android:label="@string/nav_profile" />
</navigation>
