<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_customer"
    app:startDestination="@id/customerHomeFragment">

    <fragment
        android:id="@+id/customerHomeFragment"
        android:name="edu.alia.queueease.features.customer.CustomerHomeFragment"
        android:label="@string/nav_home">
        <action
            android:id="@+id/action_home_to_activeQueue"
            app:destination="@id/activeQueueFragment" />
    </fragment>
        
    <fragment
        android:id="@+id/queueHistoryFragment"
        android:name="edu.alia.queueease.features.customer.QueueHistoryFragment"
        android:label="@string/nav_history" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="edu.alia.queueease.features.profile.ProfileFragment"
        android:label="@string/nav_profile" />

    <fragment
        android:id="@+id/activeQueueFragment"
        android:name="edu.alia.queueease.features.customer.ActiveQueueFragment"
        android:label="@string/active_queue" />
</navigation>
